--- a/app/views/sub_accounts/_account.html.erb
+++ b/app/views/sub_accounts/_account.html.erb
@@ -1,4 +1,7 @@
-<div class="card mb-4 shadow-sm" style="cursor: pointer; height: 250px; max-width: 400px;" onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';">
+<div class="card mb-4 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-height: 200px; max-width: 400px;" 
+     <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
+       onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
+     <% end %>>
   <div class="card-body">
     <div class="d-flex justify-content-between align-items-center">
       <h4 class="card-title mb-0">
