--- a/app/views/sub_accounts/show.html.erb
+++ b/app/views/sub_accounts/show.html.erb
@@ -18,6 +18,15 @@
   </div>
 </div>
 
+<!-- Categories -->
+<div class="mb-4">
+  <% @sub_account.categories.each do |category| %>
+    <%= link_to main_account_sub_account_category_path(@main_account, @sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
+      <%= category.title %>
+    <% end %>
+  <% end %>
+</div>
+
 <!-- Transactions -->
 <div class="mt-4">
   <%= render partial: 'sub_account_transactions/transactions', locals: { transactions: @sub_account.sub_account_transactions, main_account: @main_account, title: "Transactions for '#{@sub_account.title}'", sub_account: @sub_account } %>
