--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,6 @@
 <div class="row">
   <div class="col-md-9 col-sm-12">
 
-
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "needs-validation" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -47,6 +46,6 @@
 
     <h3>Cancel My Account</h3>
     <p class="text-muted">Unhappy?</p>
-    <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %>
+      <%= link_to "Cancel my account", registration_path(resource_name), data: { turbo_confirm: "Are you sure?", turbo_method: :delete }, class: "btn btn-danger" %>
   </div>
 </div>
