--- a/app/views/shared_main_account_users/_form.html.erb
+++ b/app/views/shared_main_account_users/_form.html.erb
@@ -1,25 +1,23 @@
-<%= form_with(model: [@main_account, shared_main_account_user], local: true) do |form| %>
-  <% if shared_main_account_user.errors.any? %>
+<%= form_with(model: [@main_account, @shared_main_account_user], local: true) do |form| %>
+  <% if @shared_main_account_user.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
       <h2>
-        <%= pluralize(shared_main_account_user.errors.count, "error") %> prohibited this Partner from being saved:
+        <%= pluralize(@shared_main_account_user.errors.count, "error") %> prohibited this Partner from being saved:
       </h2>
       <ul>
-        <% shared_main_account_user.errors.full_messages.each do |message| %>
+        <% @shared_main_account_user.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= form.label :user_id, "Partner Email" %>
-    <%= form.collection_select :user_id, User.where.not(id: @main_account.owner_id)
-                                             .where.not(id: @main_account.shared_main_account_users.pluck(:user_id))
-                                             .distinct, :id, :email, prompt: "Select a User", class: "form-control" %>
+  <div class="mb-3">
+    <%= form.label :user_id, "Select User" %>
+    <%= form.collection_select :user_id, User.where.not(id: @main_account.owners.pluck(:id)), :id, :full_name, prompt: "Choose a user", class: "form-select" %>
   </div>
 
-  <div class="form-group">
+  <div class="actions">
     <%= form.submit "Add Partner", class: "btn btn-primary" %>
   </div>
 <% end %>
