--- a/app/views/shared_main_account_users/index.html.erb
+++ b/app/views/shared_main_account_users/index.html.erb
@@ -6,7 +6,12 @@
 <% end %>
 
 <div class="mb-4">
-  <%= link_to "Add Partner", new_main_account_shared_main_account_user_path(@main_account), class: "btn btn-success" %>
+  <%= form_with url: main_account_shared_main_account_users_path(@main_account), method: :post, local: true do |form| %>
+    <div class="input-group mb-3">
+      <%= form.collection_select :user_id, User.where.not(id: @main_account.owners.pluck(:id)), :id, :full_name, prompt: "Choose a user", class: "form-select" %>
+      <button class="btn btn-success" type="submit">Add Partner</button>
+    </div>
+  <% end %>
 </div>
 
 <% if @shared_users.any? %>
@@ -22,13 +27,12 @@
     <tbody>
       <% @shared_users.each do |shared_user| %>
         <tr>
-          <td><%= "#{shared_user.user.first_name} #{shared_user.user.last_name}" %></td>
-          <td><%= shared_user.user.email %></td>
+          <td><%= "#{shared_user.first_name} #{shared_user.last_name}" %></td>
+          <td><%= shared_user.email %></td>
           <td><%= shared_user.created_at.strftime("%B %d, %Y") %></td>
           <td>
             <%= link_to "Remove", main_account_shared_main_account_user_path(@main_account, shared_user), 
-                        method: :delete, 
-                        data: { confirm: "Are you sure you want to remove this partner?" }, 
+                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove this partner?" }, 
                         class: "btn btn-sm btn-danger" %>
           </td>
         </tr>
