--- a/app/views/shared_main_account_users/_message.html.erb
+++ b/app/views/shared_main_account_users/_message.html.erb
@@ -1,4 +1,5 @@
-<% if @shared_users.empty? %>
+<% if (@owners - [current_user]).empty? %>
+
   <div class="alert alert-info mb-3">
     <i class="fas fa-info-circle me-2"></i>No partners have been added yet.
   </div>
