--- a/app/views/main_transactions/show.html.erb
+++ b/app/views/main_transactions/show.html.erb
@@ -25,7 +25,7 @@
       <!-- Creator -->
       <p class="mb-0">
         <i class="fas fa-user me-2"></i>
-        <span class="text-muted"><%= @main_transaction.main_account.owner.full_name %></span>
+        <span class="text-muted"><%= @main_transaction.creator.full_name %></span>
       </p>
     </div>
 
