--- a/app/views/sub_account_transactions/_form.html.erb
+++ b/app/views/sub_account_transactions/_form.html.erb
@@ -14,10 +14,18 @@
     </div>
   <% end %>
 
-  <!-- Title -->
-  <div class="mb-3">
-    <%= form.label :title, "Title", class: "form-label" %>
-    <%= form.text_field :title, class: "form-control", placeholder: "Enter transaction title", autofocus: true %>
+  <div class="row mb-3">
+    <!-- Title -->
+    <div class="col-6">
+      <%= form.label :title, "Title", class: "form-label" %>
+      <%= form.text_field :title, class: "form-control", placeholder: "Enter transaction title", autofocus: true %>
+    </div>
+
+    <!-- Amount -->
+    <div class="col-6">
+      <%= form.label :amount, "Amount (#{@main_account&.currency || '€'})", class: "form-label" %>
+      <%= form.number_field :amount, class: "form-control", placeholder: "Enter transaction amount" %>
+    </div>
   </div>
 
   <!-- Type -->
@@ -41,20 +49,15 @@
     <%= form.collection_select :category_id, @categories, :id, :title, { prompt: "Choose a Category" }, class: "form-select" %>
   </div>
 
-  <!-- Amount -->
-  <div class="mb-3">
-    <%= form.label :amount, "Amount", class: "form-label" %>
-    <%= form.number_field :amount, class: "form-control", placeholder: "Enter transaction amount" %>
-  </div>
-
   <!-- Description -->
   <div class="mb-3">
     <%= form.label :description, "Description", class: "form-label" %>
     <%= form.text_area :description, class: "form-control", placeholder: "Enter transaction description" %>
   </div>
 
-  <div class="d-grid">
-    <%= form.submit "#{action} Transaction", class: "btn btn-primary" %>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <%= form.submit "#{action} Transaction", class: "btn btn-primary me-md-2" %>
+    <button type="button" class="btn btn-secondary" onclick="window.history.back()">Cancel</button>
   </div>
 <% end %>
 
