--- a/app/views/sub_accounts/_new_account_card.html.erb
+++ b/app/views/sub_accounts/_new_account_card.html.erb
@@ -1,6 +1,6 @@
-<div class="card mb-4 shadow-sm" style="cursor: pointer; background-color: #e9ecef; height: 200px; max-width: 400px;" onclick="window.location='<%= new_main_account_sub_account_path(main_account) %>';">
+<div class="card mb-4 shadow-sm" style="cursor: pointer; background-color: #e9ecef; height: 210px; max-width: 300px;" onclick="window.location='<%= new_main_account_sub_account_path(main_account) %>';">
   <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
-    <p class="card-text fs-4 fw-bold">
+    <p class="card-text">
       <i class="fas fa-info-circle"></i> Available: <%= main_account.available_percentage %>%
     </p>
     <hr class="w-100">
