--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit <%= resource_name.to_s.humanize %></h1>
-<div class="row">
+<div class="row mt-2">
   <div class="col-md-9 col-sm-12">
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "needs-validation" }) do |f| %>
@@ -41,11 +40,5 @@
         <%= f.submit "Update", class: "btn btn-primary" %>
       </div>
     <% end %>
-
-    <hr class="my-4">
-
-    <h3>Cancel My Account</h3>
-    <p class="text-muted">Unhappy?</p>
-      <%= link_to "Cancel my account", registration_path(resource_name), data: { turbo_confirm: "Are you sure?", turbo_method: :delete }, class: "btn btn-danger" %>
-  </div>
+ </div>
 </div>
