--- a/app/views/pages/_preferences.html.erb
+++ b/app/views/pages/_preferences.html.erb
@@ -1,2 +1,18 @@
-<h3>Preferences</h3>
-<p>Preferences content goes here.</p>
+<nav class="nav nav-pills flex-column flex-sm-row mt-3">
+    <a class="flex-sm-fill text-sm-center nav-link <%= 'active' if params[:preference] == 'main_account' %>" href="<%= settings_path(section: 'preferences', preference: 'main_account') %>">Main Account</a>
+    <% if current_user.main_account && current_user.main_account.sub_accounts.any? %>
+        <a class="flex-sm-fill text-sm-center nav-link <%= 'active' if params[:preference] == 'navigation' %>" href="<%= settings_path(section: 'preferences', preference: 'navigation') %>">Navigation</a>
+    <% end %>
+    <a class="flex-sm-fill text-sm-center nav-link <%= 'active' if params[:preference] == 'theme' %>" href="<%= settings_path(section: 'preferences', preference: 'theme') %>">Theme</a>
+</nav>
+
+<% case params[:preference] %>
+<% when 'main_account' %>
+    <%= render 'pages/preferences/main_account' %>
+<% when 'navigation' %>
+    <%= render 'pages/preferences/navigation' %>
+<% when 'theme' %>
+    <%= render 'pages/preferences/theme' %>
+<% else %>
+    <%= render 'pages/preferences/main_account' %>
+<% end %>
