--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,8 @@
-<%= form_with(model: [@main_account, @sub_account, category], local: true, class: "needs-validation") do |form| %>
+<%= form_with(model: [@main_account, @sub_account, category], local: true, data: { turbo: false }, class: "needs-validation") do |form| %>
   <% if category.errors.any? %>
     <div class="alert alert-danger">
-      <h5 class="alert-heading"><%= pluralize(category.errors.count, "error") %> prohibited this Category from being saved:</h5>
-      <ul class="mb-0">
-        <% category.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+        <% category.errors[:title].each do |message| %>
+          <%= message %>
         <% end %>
       </ul>
     </div>
@@ -25,6 +23,9 @@
   <!-- Submit Button -->
   <div class="d-flex justify-content-between mt-4">
     <%= form.submit "Save Category", class: "btn btn-primary" %>
-    <%= link_to "Cancel", main_account_sub_account_categories_path(@main_account, @sub_account), class: "btn btn-secondary" %>
-  </div>
+    <% if @category.persisted? %>
+      <%= link_to "Cancel", main_account_sub_account_category_path(@main_account, @sub_account, @category), class: "btn btn-secondary" %>
+    <% else %>
+      <%= link_to "Cancel", main_account_sub_account_categories_path(@main_account, @sub_account), class: "btn btn-secondary" %>
+    <% end %>  </div>
 <% end %>
