--- a/app/views/pages/settings.html.erb
+++ b/app/views/pages/settings.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <nav class="nav nav-pills nav-justified">
-        <a class="nav-link <%= 'active' if params[:section] == 'profile' %>" href="<%= settings_path(section: 'profile') %>">Edit Profile</a>
+        <a class="nav-link <%= 'active' if params[:section] == 'profile' %>" href="<%= settings_path(section: 'profile') %>">Profile</a>
         <a class="nav-link <%= 'active' if params[:section] == 'preferences' %>" href="<%= settings_path(section: 'preferences') %>">Preferences</a>
-        <a class="nav-link <%= 'active' if params[:section] == 'cancel_account' %>" href="<%= settings_path(section: 'cancel_account') %>">Cancel Account</a>
+        <a class="nav-link <%= 'active' if params[:section] == 'cancel_account' %>" href="<%= settings_path(section: 'cancel_account') %>">Cancel</a>
     </nav>
     <% case params[:section] %>
         <% when 'profile' %>
