--- a/app/views/sub_accounts/show.html.erb
+++ b/app/views/sub_accounts/show.html.erb
@@ -1,30 +1,11 @@
-<div class="mb-4">
-  <%= render partial: "sub_accounts/account", locals: { sub_account: @sub_account, main_account: @main_account } %>
+<!-- Account Navigation -->
+<div class="d-flex justify-content-center">
+  <%= render partial: "sub_accounts/account_nav", locals: { main_account: @main_account, sub_account: @sub_account } %>
 </div>
 
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <div>
-    <%= link_to edit_main_account_sub_account_path(@main_account, @sub_account), class: "btn btn-primary btn-sm me-2" do %>
-      <i class="fas fa-edit me-1"></i> Edit
-    <% end %>
-    <%= link_to main_account_sub_account_path(@main_account, @sub_account),
-                data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Account?" },
-                class: "btn btn-danger btn-sm me-2" do %>
-      <i class="fas fa-trash-alt me-1"></i> Delete
-    <% end %>
-    <%= link_to main_account_sub_account_categories_path(@main_account, @sub_account), class: "btn btn-secondary btn-sm" do %>
-      <i class="fas fa-tags me-1"></i> Categories
-    <% end %>
-  </div>
-</div>
-
-<!-- Categories -->
-<div class="mb-4">
-  <% @sub_account.categories.each do |category| %>
-    <%= link_to main_account_sub_account_category_path(@main_account, @sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
-      <%= category.title %>
-    <% end %>
-  <% end %>
+<!-- Account Card -->
+<div class="d-flex justify-content-center mb-4">
+  <%= render partial: "sub_accounts/extended_account", locals: { sub_account: @sub_account, main_account: @main_account } %>
 </div>
 
 <!-- Transactions -->
